Adjustment per compilation error