@@ -1,12 +1,11 @@
 package com.project.back_end.services;
 
-import com.project.back_end.models.Appointment;
-import com.project.back_end.models.Doctor;
-import com.project.back_end.models.Patient;
-import com.project.back_end.repo.AppointmentRepository;
-import com.project.back_end.repo.DoctorRepository;
-import com.project.back_end.repo.PatientRepository;
-
+import com.project_back_end.models.Appointment;
+import com.project_back_end.models.Doctor;
+import com.project_back_end.models.Patient;
+import com.project_back_end.repo.AppointmentRepository;
+import com.project_back_end.repo.DoctorRepository;
+import com.project_back_end.repo.PatientRepository;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -23,7 +22,7 @@ public class AppointmentService {
     private final PatientRepository patientRepository;
     private final DoctorRepository doctorRepository;
     private final TokenService tokenService;
-    private final Service sharedService;
+    private final Service sharedService; // THIS IS YOUR custom Service class
 
     public AppointmentService(AppointmentRepository appointmentRepository,
                               PatientRepository patientRepository,
@@ -37,92 +36,84 @@ public class AppointmentService {
         this.sharedService = sharedService;
     }
 
+    // Book a new appointment
     @Transactional
     public int bookAppointment(Appointment appointment) {
         try {
             appointmentRepository.save(appointment);
             return 1;
-        } catch (Exception ex) {
-            ex.printStackTrace();
+        } catch (Exception e) {
             return 0;
         }
     }
 
+    // Update an existing appointment
     @Transactional
-    public ResponseEntity<Map<String, String>> updateAppointment(Appointment appointment) {
-        Map<String, String> response = new HashMap<>();
+    public ResponseEntity<Map<String,String>> updateAppointment(Appointment appointment) {
+        Map<String,String> res = new HashMap<>();
 
         if (appointment.getId() == null) {
-            response.put("message", "Appointment ID is required.");
-            return ResponseEntity.badRequest().body(response);
+            res.put("message", "Appointment ID is required.");
+            return ResponseEntity.badRequest().body(res);
         }
 
-        Optional<Appointment> existing = appointmentRepository.findById(appointment.getId());
-        if (existing.isEmpty()) {
-            response.put("message", "Appointment not found.");
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
+        if (!appointmentRepository.existsById(appointment.getId())) {
+            res.put("message", "Appointment not found.");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(res);
         }
 
-        int validationCode = sharedService.validateAppointment(appointment);
-        if (validationCode == -1) {
-            response.put("message", "Invalid doctor or appointment details.");
-            return ResponseEntity.badRequest().body(response);
+        int validation = sharedService.validateAppointment(appointment);
+        if (validation == -1) {
+            res.put("message", "Doctor not found or invalid details.");
+            return ResponseEntity.badRequest().body(res);
         }
-        if (validationCode == 0) {
-            response.put("message", "Doctor not available at the selected time.");
-            return ResponseEntity.badRequest().body(response);
+        if (validation == 0) {
+            res.put("message", "Doctor not available at selected time.");
+            return ResponseEntity.badRequest().body(res);
         }
 
-        try {
-            appointmentRepository.save(appointment);
-            response.put("message", "Appointment updated successfully.");
-            return ResponseEntity.ok(response);
-        } catch (Exception e) {
-            e.printStackTrace();
-            response.put("message", "Error updating appointment.");
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
-        }
+        appointmentRepository.save(appointment);
+        res.put("message", "Appointment updated.");
+        return ResponseEntity.ok(res);
     }
 
+    // Cancel an appointment
     @Transactional
-    public ResponseEntity<Map<String, String>> cancelAppointment(long id, String token) {
-        Map<String, String> response = new HashMap<>();
+    public ResponseEntity<Map<String,String>> cancelAppointment(long id, String token) {
+        Map<String,String> res = new HashMap<>();
 
-        Optional<Appointment> existing = appointmentRepository.findById(id);
-        if (existing.isEmpty()) {
-            response.put("message", "Appointment not found.");
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
+        Optional<Appointment> opt = appointmentRepository.findById(id);
+        if (opt.isEmpty()) {
+            res.put("message", "Appointment not found.");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(res);
         }
 
-        Appointment appointment = existing.get();
+        Appointment appointment = opt.get();
         Long patientIdFromToken = tokenService.getPatientIdFromToken(token);
 
         if (appointment.getPatient() == null ||
-                !appointment.getPatient().getId().equals(patientIdFromToken)) {
-            response.put("message", "Unauthorized cancellation.");
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).body(response);
+            !Objects.equals(appointment.getPatient().getId(), patientIdFromToken)) {
+            res.put("message", "Unauthorized to cancel.");
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).body(res);
         }
 
-        try {
-            appointmentRepository.delete(appointment);
-            response.put("message", "Appointment cancelled.");
-            return ResponseEntity.ok(response);
-        } catch (Exception e) {
-            e.printStackTrace();
-            response.put("message", "Error cancelling appointment.");
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
-        }
+        appointmentRepository.delete(appointment);
+        res.put("message", "Appointment cancelled.");
+        return ResponseEntity.ok(res);
     }
 
+    // Get appointments for doctor
     @Transactional
-    public Map<String, Object> getAppointment(String pname, LocalDate date, String token) {
-        Map<String, Object> result = new HashMap<>();
+    public Map<String,Object> getAppointment(String pname, LocalDate date, String token) {
+        Map<String,Object> res = new HashMap<>();
 
         Long doctorId = tokenService.getDoctorIdFromToken(token);
-        if (doctorId == null || doctorRepository.findById(doctorId).isEmpty()) {
-            result.put("appointments", List.of());
-            result.put("message", "Invalid doctor token.");
-            return result;
+        Optional<Doctor> doc = doctorRepository.findById(doctorId);
+
+        if (doc.isEmpty()) {
+            res.put("message", "Invalid doctor token.");
+            res.put("appointments", Collections.emptyList());
+            return res;
         }
 
         LocalDateTime start = date.atStartOfDay();
@@ -130,42 +121,33 @@ public class AppointmentService {
 
         List<Appointment> list;
 
-        if (pname != null && !pname.trim().isEmpty() && !"null".equalsIgnoreCase(pname)) {
-            list = appointmentRepository
-                    .findByDoctorIdAndPatient_NameContainingIgnoreCaseAndAppointmentTimeBetween(
-                            doctorId, pname.trim(), start, end);
+        if (pname != null && !pname.equalsIgnoreCase("null") && !pname.isBlank()) {
+            list = appointmentRepository.findByDoctorIdAndPatient_NameContainingIgnoreCaseAndAppointmentTimeBetween(
+                    doctorId, pname.trim(), start, end
+            );
         } else {
-            list = appointmentRepository
-                    .findByDoctorIdAndAppointmentTimeBetween(doctorId, start, end);
+            list = appointmentRepository.findByDoctorIdAndAppointmentTimeBetween(
+                    doctorId, start, end
+            );
         }
 
-        result.put("appointments", list);
-        return result;
+        res.put("appointments", list);
+        return res;
     }
 
+    // Update appointment status
     @Transactional
-    public ResponseEntity<Map<String, String>> changeStatus(Long id, int status) {
-        Map<String, String> response = new HashMap<>();
+    public ResponseEntity<Map<String,String>> changeStatus(long id, int status) {
+        Map<String,String> res = new HashMap<>();
 
-        if (id == null) {
-            response.put("message", "Appointment ID required.");
-            return ResponseEntity.badRequest().body(response);
+        if (!appointmentRepository.existsById(id)) {
+            res.put("message", "Appointment not found.");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(res);
         }
 
-        Optional<Appointment> existing = appointmentRepository.findById(id);
-        if (existing.isEmpty()) {
-            response.put("message", "Appointment not found.");
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
-        }
+        appointmentRepository.updateStatus(status, id);
 
-        try {
-            appointmentRepository.updateStatus(status, id);
-            response.put("message", "Status updated.");
-            return ResponseEntity.ok(response);
-        } catch (Exception e) {
-            e.printStackTrace();
-            response.put("message", "Error updating status.");
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
-        }
+        res.put("message", "Status updated.");
+        return ResponseEntity.ok(res);
     }
 }
